# prez

./: .dockerignore  .env-full-template  .env-required-template  .env-template  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  Dockerfile  LICENSE  README-Custom-Endpoints.md  README-Dev.md  README-OGC-Features.md  README.md  Taskfile.yaml  api_test_client.py  azure_functions.Dockerfile  changelog.md  connegp-0.1.4-py3-none-any.whl  connegp-0.1.5-py3-none-any.whl  connegp-0.1.6-py3-none-any.whl  entrypoint.sh  function_app.py  host.json  local.settings.json  main.py  ogcfeaturesapi.Dockerfile  pivot.ttl  plan.py  pyproject.toml  requirements.api_test_client.txt  requirements.dev.txt  requirements.txt  test_utils.py
.run/: test_data pyoxigraph.run.xml
Connegp/: .gitignore  README.md  pyproject.toml  setup.py
Connegp/connegp/: __init__.py  connegp.py  consts.py  profile.py
Connegp/tests/: __init__.py  request_objects.py  test.py  test_connegp.py
Connegp/tests/fastapi_app/: app.py
Connegp/tests/flask_app/: app.py
Prez/: .gitignore  README.md  pyproject.toml  requirements.txt  test_utils.py
Prez/prez/: app.py  config.py  profiles.py  utils.py
Prez/prez/models/: __init__.py  prez_model.py  prez_model_constructed.py  vocprez_dataset.py
Prez/prez/models/vocprez/: __init__.py  vocprez_collection.py  vocprez_collection_list.py  vocprez_concept.py  vocprez_concept_constructed.py  vocprez_dataset.py  vocprez_scheme.py  vocprez_scheme_constructed.py  vocprez_scheme_list.py
Prez/prez/renderers/: __init__.py  list_renderer.py  profiles_renderer.py  renderer.py  vocprez_dataset_renderer.py
Prez/prez/renderers/vocprez/: __init__.py  vocprez_collection_list_renderer.py  vocprez_collection_renderer.py  vocprez_concept_renderer.py  vocprez_dataset_renderer.py  vocprez_profiles_renderer.py  vocprez_scheme_list_renderer.py  vocprez_scheme_renderer.py
Prez/prez/routers/: vocprez_router.py
Prez/prez/services/: sparql_utils.py  vocprez_service.py
Prez/prez/static/css/: index.css  prez.css  theme.css
Prez/prez/static/js/: script.js
Prez/prez/static/sass/: _layout.scss  _links.scss  _navs.scss  _reset.scss  _tables.scss  main.scss
Prez/prez/surround-theme/: footer.html  header.html
Prez/prez/surround-theme/static/css/: theme.css
Prez/prez/surround-theme/templates/: footer.html  header.html
Prez/prez/templates/: 500.html  _macros.html  _page.html  _page_old.html  about.html  alt.html  alt_link.html  breadcrumbs.html  header.html  index.html  mem.html  nav.html  nav_old.html  object.html  profiles.html  search.html  sparql.html  vocprez_dataset.html
Prez/prez/templates/vocprez/: _vocprez_page.html  vocprez_about.html  vocprez_collection.html  vocprez_collections.html  vocprez_concept.html  vocprez_concept_constructed.html  vocprez_dataset.html  vocprez_home.html  vocprez_nav.html  vocprez_profiles.html  vocprez_scheme.html  vocprez_schemes.html
Prez/rdf_files/: dataset.ttl  scheme.ttl  update_vocabs.py
Prez/tests/: test_prez.tavern.yaml  test_units.py
azure/: .funcignore  README.md  azure_functions.Dockerfile  function_app.py  local.settings.json  patched_asgi_function_wrapper.py  publish.sh  publish_or_start.sh
bdr_test_data/: ogc_features.ttl.x
benchmark/: quads_vs_stores.py
corentin/: .env  data.ttl  endpoints.ttl
demo/: docker-compose.yml
dev/: cql_functions.http  dev-config.ttl  dev-setup.py  development.run.xml  http-client.env.json  prez demo instance.run.xml
docs/: 2025-11-26-cql-filter-values-heuristic.md  2025-11-27-profile-constraint-subclass-matching.md  2026-01-29-fts-query-format-plan.md  2026-01-29-jena-spatial-query-format-plan.md  cql_filter_exists_optimization.md  custom_endpoints.md  development.md  faceted_search.md  fuseki_fts_functionality.md  lucene-fts-escaping.md  ogc_features.md  path_aliases.md  pivotting.md  profile_constraint_distance.md  result_counting.md  running_behind_proxy.md
nvsvocprez/: app.py  config.py  dcat.ttl  profiles.py  sdo.ttl  utils.py
prez/: app.py  bnode.py  cache.py  config.py  cql_search.py  dependencies.py  enums.py  middleware.py  profiles.py  response.py  test_endpoints_spaceprez.py  test_endpoints_vocprez.py  test_profiles.py  url.py  utils.py  view_funcs.py
temp/: cql2sparql.py  grammar.py  shacl-nodeshapes2sparql.py  shacl2sparql.py  shacl_node_selection.py  shacl_nodeshapes2sparql.py  test_search.py
test_data/: animal_profiles.ttl  animals.ttl  bnode_depth-1.ttl  bnode_depth-2-2.ttl  bnode_depth-2.ttl  bnode_depth-4.ttl  catprez.ttl  cpr.ttl  cql_queryable_shapes.ttl  cql_queryable_shapes_bdr.ttl  custom_endpoints.json  custom_endpoints_vanilla_5_level.ttl  custom_endpoints_vanilla_5_level_data.ttl  facet_object.ttl  fts_property_shapes.ttl  issue_286.ttl  object_catalog_bblocks_catalog.ttl  object_vocab_api_bblocks.ttl  object_vocab_datatype_bblocks.ttl  object_vocab_parameter_bblocks.ttl  object_vocab_schema_bblocks.ttl  obs.ttl  ogc_features.ttl  ogc_records_profile.ttl  pivot.ttl  pivot_profiles.ttl  profile_subclass_test.ttl  redirect-foaf-homepage.ttl  sandgate.ttl  spaceprez.ttl  vocprez.ttl
tests/: TO_FIX_test_dd_profiles.py  TO_FIX_test_endpoints_vocprez.py  TO_FIX_test_search.py  _cql_fuseki_test.py  _test_count.py  _test_cql.py  _test_cql_fuseki.py  conftest.py  test_cql.py  (+61 more)
theme-template/: .gitignore  README.md  bitbucket-pipelines.yml  config.yaml  docker-run.sh  pipeline_script.py  pyproject.toml
theme-template/deploy/: docker-compose.yml  ecs-task-def.json  kube-manifest.yaml
theme-template/deploy/kube/: kube-ebs-storage-class.yaml
theme-template/theme/static/css/: theme.css
theme-template/theme/templates/: fonts.html  footer.html  header.html
vocabs-template/: .gitignore  README.md  pyproject.toml  requirements.txt
vocabs-template/ontologies/: dcterms.ttl  skos.ttl
vocabs-template/scripts/: config.py  sparql_utils.py  update_vocabs.py  validate_vocabs.py
vocabs-template/tests/: test_vocabs_template.py
vocabs-template/vocabularies/: AssociationType.ttl  data-access-rights.ttl  prof_roles.ttl  simplelithology.ttl  test_scheme.ttl  test_scheme2.ttl
(+662 files in other folders)
