[tool.poetry]
name = "prez"
version = "0.1.0.dev0"
description = "A python application for displaying linked data on the web"
authors = ["Jamie Feiss <jamie.feiss@gmail.com>", "Nicholas Car <nick@kurrawong.net>", "David Habgood <dcchabgood@gmail.com>"]
packages = [
    { include = "prez" },
    { include = "pyproject.toml", format = "wheel", to="prez" },
]
include = [
    { path = "./*.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
    { path = "demo", format = "sdist" },
    { path = "dev", format = "sdist" },
    { path = "tests", format = "sdist" },
    { path = "poetry.lock", format = "sdist" },
    { path = "./*.whl", format = "sdist" },
    { path = "*.toml", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {version = "^0.30.0", optional = true }
httpx = "^0.27.0"
rdflib = "^7.0.0"
toml = "^0.10.2"
fastapi = "^0.114.0"
jinja2 = "^3.1.2"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.0"
pyld = "^2.0.4"
aiocache = "^0.12.2"
sparql-grammar-pydantic = "^0.1.2"
rdf2geojson = {git = "https://github.com/ashleysommer/rdf2geojson.git", rev = "v0.2.1"}
python-multipart = "^0.0.9"
pyoxigraph = "^0.3.22"
oxrdflib = "^0.3.7"

[tool.poetry.extras]
server = ["uvicorn"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pre-commit = "^2.15.0"
black = "^24.4.2"
pytest-asyncio = "^0.23.7"
requests = "^2.28.1"
python-dotenv = "^1.0.0"
coverage = "^7.3.2"
tabulate = "^0.9.0"
ogctests = "^0.1.15"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
