[tool.poetry]
name = "prez"
version = "0.1.0"
description = ""
authors = ["jamiefeiss <jamie.feiss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
Jinja2 = "^3.0.2"
aiofiles = "^0.7.0"
httpx = "^0.20.0"
rdflib = "^6.0.2"
connegp = { path = "../Connegp/" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
pre-commit = "^2.15.0"
tavern = "^1.16.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]