[tool.poetry]
name = "vocabs-template"
version = "0.1.0"
description = "Template for vocab pipeline"
authors = ["jamiefeiss <jamie.feiss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rdflib = "^6.0.2"
pyshacl = "^0.17.1"
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88